fix paragraph spacing

--- a/css/typography.css
+++ b/css/typography.css
@@ -38,7 +38,7 @@ p {
 	font-size: 1em;
 	font-weight: lighter;
 	line-height: 1.5em;
-	padding-bottom: 1em;
+	padding-bottom: 0.25em;
 }
 
 a {
